--- a/api/.gitignore
+++ b/api/.gitignore
@@ -19,11 +19,8 @@
 
 # Ignore uploaded files in development
 /storage/*
+!/storage/.keep
 
-/node_modules
-/yarn-error.log
-
-/public/assets
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
