--- a/api/Gemfile
+++ b/api/Gemfile
@@ -65,3 +65,6 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "rubocop", require: false
 gem "tzinfo-data", platforms: %i[mingw mswin x64_mingw jruby]
+
+gem "sidekiq"
+gem "youtube-dl.rb"
